fixed misaligned text

--- a/taboo/src/pages/Results/Results.css
+++ b/taboo/src/pages/Results/Results.css
@@ -1,4 +1,8 @@
 .Winner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     font-size: .9rem;
     color: rgb(222, 232, 135);
     max-width: 45rem;
